Tue Aug 11 21:14:40 MEST 1998 Sven Neumann <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c: Added an about-dialog that
	gives access to the short help hidden in the scripts.

Tue Aug 11 12:24:14 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* tile.c tile.h: exported some accessor functions, made Tile
	opaque.
	* tile_manager.c tile_manager.h: added a public call to invalidate
	a tile
	* blend.c boundary.c by_color_select.c channel.c color_picker.c
	drawable_cmds.c fuzzy_select.c gimpimage.c image_render.c ink.c
	layer.c paint_core.c paint_funcs.c pixel_region.c plug_in.c undo.c
	xcf.c: eliminated references to tile private data
	* ink.c (ink_set_undo_tiles), paint_core.c (set_undo_tiles): used
	tile sharing to replace tile copies for undo tiles
	* undo.c (undo_pop_image): swap tiles instead of pixels when
	possible

Mon Aug 10 14:48:20 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/gdisplay.c: corrected 2 annoyances: that stupid hash table
	== NULL warning and the pointer in the title bar instead of the
	ID

	* app/internal_procs.c: we're registering more procs, so make update
	the total proc count

Mon Aug 10 16:20:33 MEST 1998 Sven Neumann <sven@gimp.org>
	
	* app/internal_procs.c
	* app/text_tool.[ch]: Wrappers for gimp-text and
	gimp-text-get-extents.
	
	* plug-ins/script-fu/script-fu-enums.h
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu.c
	* plug-ins/script-fu/scripts/test-sphere.scm: A font-selector
	for the script-fu dialog. See documentation in test-sphere.scm.	

Sun Aug  9 14:15:42 MEST 1998 Sven Neumann <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c: The scripf-fu dialog
	now remembers your last settings and has a "Reset to Defaults"
	button.

1998-08-07  Raja R Harinath  <harinath@cs.umn.edu>

	* plug-ins/script-fu/Makefile.am (INCLUDES): 
	List $(top_srcdir) before $(GTK_CFLAGS).

Thu Aug  6 15:12:16 PDT 1998 Manish Singh <yosh@gimp.org>

	* acinclude.m4: for people without the gettext macros